MailZu-ng 0.12.mailzu-ng-da-php72-00a08b4+1 (19.12.2022)
---------
  - Cleaned up the changes to the RFC822 code. Gone back to just making the minimum modifications
    to the original code and adding the extra functions for MailZu in a seperate library file. The
    RFC822 options can now also be defined in the config file. Two more variables have been added,
    namely $conf['da']['rfc822AllowComments'] and $conf['da']['public_internet'].

MailZu-ng 0.12.mailzu-ng-da-php72-3ce1595+1 (19.12.2022)
---------
  - Fixed the query which finds the unreviewed email messages in quarantine. The obvious effect was
    that deleted messages to still be reported on subsequent days. This has now been fixed. The
    script now just shows messages which have not been reviewed or which are pending administrator
    approval prior to being released.
  - Fixed some message wording in the reporting script.

MailZu-ng 0.12.mailzu-ng-da-php72-d7c6328+1 (14.12.2022)
---------
  - Updated documentation.

MailZu-ng 0.12.mailzu-ng-da-php72-31d56ce+1 (13.12.2022)
---------
  - Added and updated documentation.

MailZu-ng 0.12.mailzu-ng-da-php72-ef2e921+1 (13.12.2022)
---------
  - Added an example logrotate configuration in contrib/mailzu.logrotate.

MailZu-ng 0.12.mailzu-ng-da-php72-b614c5f+1 (13.12.2022)
---------
  - Installed the DA list code.
  - Updated composer.json to include two new libraries.

MailZu-ng 0.12.mailzu-ng-da-php72-64c2096+1 (13.12.2022)
---------
  - Merged administrators.
  - Added cookie expiry option ($conf['auth']['cookieExpiry']).
  - Added a fallback From Email address ($conf['app']['fallbackEmailAddress']). Used by
    getFromEmailAddress.
  - Added configuration options for the daily quarantine reporting email
    ($conf['script']['reportDays'], $conf['script']['sendZero'],$conf['script']['textEmail']).
  - Added a configuration for the mailzu clean-up script ($conf['script']['quarantineDays']).